Save work before deleting branch

--- a/.gitignore
+++ b/.gitignore
@@ -47,4 +47,4 @@ pids/
 # =========================
 data/tmp/
 data/cache/
-alo-commit-lên-git-rồi-nha-ae-cứ-yên-tâm-bài-này-được-giải-chắc
+.alo-commit-lên-git-rồi-nha-ae-cứ-yên-tâm-bài-này-được-giải-chắc
