--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "thiep-tet-9a4-server",
-  "version": "1.0.5",
+  "version": "1.1.5",
   "description": "Server cho thiệp Tết 9A4",
   "author": "Trần Hữu Nhật Nam",
   "contributors": [
-    "Huỳnh Gia Kiệt", "Hoàng Thanh Trúc"
-        ],
+    "Huỳnh Gia Kiệt",
+    "Hoàng Thanh Trúc"
+  ],
   "main": "main.js",
   "scripts": {
     "start": "node main.js",
